# ha-xiaobiu

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
custom_components/suning_biu/: __init__.py  config_flow.py  const.py  iar_external_view.py  manifest.json
custom_components/suning_biu/suning_biu_ha/: captcha_bridge.py  client.py
custom_components/suning_biu/translations/: en.json  zh-Hans.json
custom_components/xiaobiu/: climate.py  coordinator.py  manifest.json
docs/plans/2026-03-20-cli-sms-throttle-and-captcha-launch-design/: _index.md  architecture.md  bdd-specs.md  best-practices.md
docs/plans/2026-03-20-cli-sms-throttle-and-captcha-launch-plan/: _index.md  task-001-sms-rate-limit-impl.md  task-001-sms-rate-limit-test.md  task-002-manual-captcha-launch-impl.md  task-002-manual-captcha-launch-test.md  task-003-cli-verification.md
docs/plans/2026-03-20-ha-iar-regression-rollback-design/: _index.md  architecture.md  bdd-specs.md  best-practices.md
src/suning_biu_ha/: __init__.py  captcha_bridge.py  client.py  models.py
tasks/: lessons.md  todo.md
tests/: test_captcha_bridge.py  test_client.py  test_home_assistant_component.py
