[project]
name = "ha-xiaobiu"
version = "0.1.5"
description = "Home Assistant custom integration for Xiaobiu (苏宁小biu) smart home devices"
readme = "README.md"
authors = [
  { name = "FaintGhost", email = "zhang.yaowei@live.com" }
]
requires-python = ">=3.14"
dependencies = [
  "python-xiaobiu>=0.1.0",
]

[dependency-groups]
dev = [
  "pillow>=12.1.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]
