[project]
name = "ha-xiaobiu"
version = "0.0.1"
description = "Home Assistant custom integration for Xiaobiu (苏宁小biu) smart home devices"
readme = "README.md"
authors = [
  { name = "FaintGhost", email = "zhang.yaowei@live.com" },
  { name = "zhiyuHD", email = "zhiyuxl@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
  "xiaobiu-python>=0.0.1",
]

[dependency-groups]
dev = [
  "pillow>=12.1.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]
